adding new build

--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -372,6 +372,7 @@
     <ClInclude Include="ComponentSlider.h" />
     <ClInclude Include="ComponentSphereCollider.h" />
     <ClInclude Include="ComponentText.h" />
+    <ClInclude Include="ComponentTrail.h" />
     <ClInclude Include="ComponentTransform.h" />
     <ClInclude Include="ComponentUI.h" />
     <ClInclude Include="Debug.h" />
@@ -556,6 +557,7 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="ModuleTween.h" />
+    <ClInclude Include="Trail.h" />
     <ClInclude Include="UtilitiesPhysX.h" />
     <ClInclude Include="Viewport.h" />
     <ClInclude Include="WaterFrameBuffers.h" />
@@ -611,6 +613,7 @@
     <ClCompile Include="ComponentSlider.cpp" />
     <ClCompile Include="ComponentSphereCollider.cpp" />
     <ClCompile Include="ComponentText.cpp" />
+    <ClCompile Include="ComponentTrail.cpp" />
     <ClCompile Include="ComponentTransform.cpp" />
     <ClCompile Include="ComponentUI.cpp" />
     <ClCompile Include="Debug.cpp" />
@@ -737,6 +740,7 @@
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="ModuleTween.cpp" />
+    <ClCompile Include="Trail.cpp" />
     <ClCompile Include="UtilitiesPhysX.cpp" />
     <ClCompile Include="Viewport.cpp" />
     <ClCompile Include="WaterFrameBuffers.cpp" />
