--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -687,6 +687,8 @@
     <ClInclude Include="ComponentJoint.h">
       <Filter>Components\Physics\Joints</Filter>
     </ClInclude>
+    <ClInclude Include="ComponentTrail.h" />
+    <ClInclude Include="Trail.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -1634,6 +1636,8 @@
     <ClCompile Include="ComponentJoint.cpp">
       <Filter>Components\Physics\Joints</Filter>
     </ClCompile>
+    <ClCompile Include="ComponentTrail.cpp" />
+    <ClCompile Include="Trail.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
