Audio going brrrr I'm deaf solved

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="FadeImages.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="Main_Menu_Music.h" />
     <ClInclude Include="MeleeLeshen.h" />
     <ClInclude Include="MiniGame_Revive.h" />
     <ClInclude Include="MoveCameraArroundObject.h" />
@@ -314,6 +315,7 @@
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="Main_Menu_Music.cpp" />
     <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MiniGame_Revive.cpp" />
     <ClCompile Include="MoveCameraArroundObject.cpp" />
