--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -687,8 +687,12 @@
     <ClInclude Include="ComponentJoint.h">
       <Filter>Components\Physics\Joints</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentTrail.h" />
-    <ClInclude Include="Trail.h" />
+    <ClInclude Include="ComponentTrail.h">
+      <Filter>Components\ParticleSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="Trail.h">
+      <Filter>Components\ParticleSystem</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -1636,8 +1640,12 @@
     <ClCompile Include="ComponentJoint.cpp">
       <Filter>Components\Physics\Joints</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentTrail.cpp" />
-    <ClCompile Include="Trail.cpp" />
+    <ClCompile Include="ComponentTrail.cpp">
+      <Filter>Components\ParticleSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="Trail.cpp">
+      <Filter>Components\ParticleSystem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
