--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -46,7 +46,7 @@
         "Ground": true,
         "Player": true,
         "Enemy": true,
-        "Drowner": true,
+        "Drowner": false,
         "Dashcoll": true
     },
     "Player": {
@@ -70,7 +70,7 @@
     "Drowner": {
         "Default": true,
         "Wall": true,
-        "Ground": true,
+        "Ground": false,
         "Player": true,
         "Enemy": true,
         "Drowner": true,
