--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -687,12 +687,8 @@
     <ClInclude Include="ComponentJoint.h">
       <Filter>Components\Physics\Joints</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentTrail.h">
-      <Filter>Components\ParticleSystem</Filter>
-    </ClInclude>
-    <ClInclude Include="Trail.h">
-      <Filter>Components\ParticleSystem</Filter>
-    </ClInclude>
+    <ClInclude Include="ComponentTrail.h" />
+    <ClInclude Include="Trail.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -1640,12 +1636,8 @@
     <ClCompile Include="ComponentJoint.cpp">
       <Filter>Components\Physics\Joints</Filter>
     </ClCompile>
-    <ClCompile Include="ComponentTrail.cpp">
-      <Filter>Components\ParticleSystem</Filter>
-    </ClCompile>
-    <ClCompile Include="Trail.cpp">
-      <Filter>Components\ParticleSystem</Filter>
-    </ClCompile>
+    <ClCompile Include="ComponentTrail.cpp" />
+    <ClCompile Include="Trail.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
