--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClCompile Include="Main_Menu_Music.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
+    <ClCompile Include="Trigger_To_Lvl1_Tutorial.cpp">
+      <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -690,6 +693,9 @@
     </ClInclude>
     <ClInclude Include="Main_Menu_Music.h">
       <Filter>Scripts\UI\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="Trigger_To_Lvl1_Tutorial.h">
+      <Filter>Scripts\Triggers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
