Storing data between scenes should be solved

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -362,6 +362,7 @@
     <ClCompile Include="RockSpawner.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
     <ClCompile Include="EffectArea.cpp" />
+    <ClCompile Include="Scores_Data.cpp" />
     <ClCompile Include="SpawnEnemy.cpp" />
     <ClCompile Include="SpawnEnemyManager.cpp" />
     <ClCompile Include="Spawner.cpp" />
