--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -342,6 +342,9 @@
     <ClCompile Include="Trigger_To_Lvl1_Tutorial.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
+    <ClCompile Include="Scores_Data.cpp">
+      <Filter>Scripts\UI\Win Menu</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
