health orb prefab

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="NilfSoldierShield.h" />
     <ClInclude Include="ParticlePool.h" />
     <ClInclude Include="ParticleRelease.h" />
+    <ClInclude Include="Pickup.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="DebugManager.h" />
     <ClInclude Include="DialogueManager.h" />
@@ -330,6 +331,7 @@
     <ClCompile Include="NilfSoldierShield.cpp" />
     <ClCompile Include="ParticlePool.cpp" />
     <ClCompile Include="ParticleRelease.cpp" />
+    <ClCompile Include="Pickup.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="DebugManager.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
