--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -345,6 +345,9 @@
     <ClCompile Include="Scores_Data.cpp">
       <Filter>Scripts\UI\Win Menu</Filter>
     </ClCompile>
+    <ClCompile Include="Pickup.cpp">
+      <Filter>Scripts\Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -699,6 +702,9 @@
     </ClInclude>
     <ClInclude Include="Trigger_To_Lvl1_Tutorial.h">
       <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="Pickup.h">
+      <Filter>Scripts\Player</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
