--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -315,9 +315,6 @@
     </ClCompile>
     <ClCompile Include="SteeringAvoid.cpp">
     </ClCompile>
-    <ClCompile Include="AttackTrigger.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Boss_Lifebar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
@@ -346,6 +343,9 @@
       <Filter>Scripts\UI\Win Menu</Filter>
     </ClCompile>
     <ClCompile Include="Pickup.cpp">
+      <Filter>Scripts\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="AttackTrigger.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
   </ItemGroup>
@@ -676,9 +676,6 @@
     </ClInclude>
     <ClInclude Include="SteeringAvoid.h">
     </ClInclude>
-    <ClInclude Include="AttackTrigger.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Boss_Lifebar.h">
       <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
@@ -704,6 +701,9 @@
       <Filter>Scripts\Triggers</Filter>
     </ClInclude>
     <ClInclude Include="Pickup.h">
+      <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="AttackTrigger.h">
       <Filter>Scripts\Player</Filter>
     </ClInclude>
   </ItemGroup>
