cutscene base code

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -193,6 +193,8 @@
     <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="Credits.h" />
     <ClInclude Include="CrowsLeshen.h" />
+    <ClInclude Include="CutsceneCamera.h" />
+    <ClInclude Include="CutsceneShot.h" />
     <ClInclude Include="DashCollider.h" />
     <ClInclude Include="DrownedGrab.h" />
     <ClInclude Include="Dummie.h" />
@@ -305,6 +307,8 @@
     <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="Credits.cpp" />
     <ClCompile Include="CrowsLeshen.cpp" />
+    <ClCompile Include="CutsceneCamera.cpp" />
+    <ClCompile Include="CutsceneShot.cpp" />
     <ClCompile Include="DashCollider.cpp" />
     <ClCompile Include="DrownedGrab.cpp" />
     <ClCompile Include="Dummie.cpp" />
