--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -348,6 +348,12 @@
     <ClCompile Include="Pickup.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
+    <ClCompile Include="CutsceneCamera.cpp">
+      <Filter>Scripts\Cameras</Filter>
+    </ClCompile>
+    <ClCompile Include="CutsceneShot.cpp">
+      <Filter>Scripts\Cameras</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -705,6 +711,12 @@
     </ClInclude>
     <ClInclude Include="Pickup.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CutsceneCamera.h">
+      <Filter>Scripts\Cameras</Filter>
+    </ClInclude>
+    <ClInclude Include="CutsceneShot.h">
+      <Filter>Scripts\Cameras</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
