Damage Count Started

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -273,6 +273,7 @@
     <ClInclude Include="Tutorial_HUD_Triggers.h" />
     <ClInclude Include="Tutorial_Intro.h" />
     <ClInclude Include="UI_Char_Frame.h" />
+    <ClInclude Include="UI_DamageCount.h" />
     <ClInclude Include="UI_EndMenu.h" />
     <ClInclude Include="UI_Ultibar_Particle.h" />
     <ClInclude Include="UltiBar.h" />
@@ -384,6 +385,7 @@
     <ClCompile Include="Tutorial_HUD_Triggers.cpp" />
     <ClCompile Include="Tutorial_Intro.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
+    <ClCompile Include="UI_DamageCount.cpp" />
     <ClCompile Include="UI_EndMenu.cpp" />
     <ClCompile Include="UI_Ultibar_Particle.cpp" />
     <ClCompile Include="UltiBar.cpp" />
