working on wagonete velocity

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -351,6 +351,9 @@
     <ClCompile Include="AttackTrigger.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
+    <ClCompile Include="WagoneteAddVelocity.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -711,6 +714,9 @@
     </ClInclude>
     <ClInclude Include="AttackTrigger.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="WagoneteAddVelocity.h">
+      <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
