--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -284,6 +284,7 @@
     <ClInclude Include="VagoneteDirection.h" />
     <ClInclude Include="VagoneteMove.h" />
     <ClInclude Include="VagoneteObstacle.h" />
+    <ClInclude Include="WagoneteAddVelocity.h" />
     <ClInclude Include="Wagonnete_UI.h" />
   </ItemGroup>
   <ItemGroup>
@@ -395,6 +396,7 @@
     <ClCompile Include="VagoneteDirection.cpp" />
     <ClCompile Include="VagoneteMove.cpp" />
     <ClCompile Include="VagoneteObstacle.cpp" />
+    <ClCompile Include="WagoneteAddVelocity.cpp" />
     <ClCompile Include="Wagonnete_UI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
