--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="CameraShake.h" />
     <ClInclude Include="CameraUltiMode.h" />
+    <ClInclude Include="CameraWagonette.h" />
     <ClInclude Include="Ciri.h" />
     <ClInclude Include="CiriFightController.h" />
     <ClInclude Include="CiriOriginal.h" />
@@ -299,6 +300,7 @@
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="CameraShake.cpp" />
     <ClCompile Include="CameraUltiMode.cpp" />
+    <ClCompile Include="CameraWagonette.cpp" />
     <ClCompile Include="Ciri.cpp" />
     <ClCompile Include="CiriFightController.cpp" />
     <ClCompile Include="CiriOriginal.cpp" />
