--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -348,6 +348,9 @@
     <ClCompile Include="AttackTrigger.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
+    <ClCompile Include="CameraWagonette.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -705,6 +708,9 @@
     </ClInclude>
     <ClInclude Include="AttackTrigger.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraWagonette.h">
+      <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
