--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="DashCollider.h" />
     <ClInclude Include="DrownedGrab.h" />
     <ClInclude Include="Dummie.h" />
+    <ClInclude Include="DummyEnemy.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
@@ -313,6 +314,7 @@
     <ClCompile Include="DashCollider.cpp" />
     <ClCompile Include="DrownedGrab.cpp" />
     <ClCompile Include="Dummie.cpp" />
+    <ClCompile Include="DummyEnemy.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
