--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -360,6 +360,9 @@
     <ClCompile Include="WagoneteAddVelocity.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="DummyEnemy.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -729,6 +732,9 @@
     </ClInclude>
     <ClInclude Include="WagoneteAddVelocity.h">
       <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="DummyEnemy.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
