starting centered camera (for some reason it switches to free camera)

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Bonfire.h" />
     <ClInclude Include="Boss_Lifebar.h" />
     <ClInclude Include="BreakableObject.h" />
+    <ClInclude Include="CameraCentered.h" />
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
@@ -295,6 +296,7 @@
     <ClCompile Include="Bonfire.cpp" />
     <ClCompile Include="Boss_Lifebar.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
+    <ClCompile Include="CameraCentered.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
