--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -316,8 +316,6 @@
     <ClCompile Include="CloudLeshen.cpp">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClCompile>
-    <ClCompile Include="SteeringAvoid.cpp">
-    </ClCompile>
     <ClCompile Include="Boss_Lifebar.cpp">
       <Filter>Scripts\UI\HUD</Filter>
     </ClCompile>
@@ -362,6 +360,9 @@
     </ClCompile>
     <ClCompile Include="DummyEnemy.cpp">
       <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="SteeringAvoid.cpp">
+      <Filter>Scripts\Enemies\Steering</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -692,8 +693,6 @@
     <ClInclude Include="CloudLeshen.h">
       <Filter>Scripts\Enemies\Leshen</Filter>
     </ClInclude>
-    <ClInclude Include="SteeringAvoid.h">
-    </ClInclude>
     <ClInclude Include="Boss_Lifebar.h">
       <Filter>Scripts\UI\HUD</Filter>
     </ClInclude>
@@ -735,6 +734,9 @@
     </ClInclude>
     <ClInclude Include="DummyEnemy.h">
       <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="SteeringAvoid.h">
+      <Filter>Scripts\Enemies\Steering</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -812,6 +814,9 @@
     </Filter>
     <Filter Include="Scripts\Objects">
       <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Enemies\Steering">
+      <UniqueIdentifier>{a22813e1-06a0-4f2c-af88-93c611da76da}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
