cirinado, wiating for another particle sis

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="Ciri.h" />
     <ClInclude Include="CiriFightController.h" />
+    <ClInclude Include="CiriNado.h" />
     <ClInclude Include="CiriOriginal.h" />
     <ClInclude Include="CloudLeshen.h" />
     <ClInclude Include="Credits.h" />
@@ -302,6 +303,7 @@
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="Ciri.cpp" />
     <ClCompile Include="CiriFightController.cpp" />
+    <ClCompile Include="CiriNado.cpp" />
     <ClCompile Include="CiriOriginal.cpp" />
     <ClCompile Include="CloudLeshen.cpp" />
     <ClCompile Include="Credits.cpp" />
