--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -354,6 +354,9 @@
     <ClCompile Include="WagoneteAddVelocity.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="CiriNado.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -717,6 +720,9 @@
     </ClInclude>
     <ClInclude Include="WagoneteAddVelocity.h">
       <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriNado.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
