--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -64,7 +64,7 @@
         "Ground": true,
         "Player": true,
         "Enemy": true,
-        "Drowner": true,
+        "Drowner": false,
         "Dashcoll": true
     },
     "Drowner": {
@@ -72,7 +72,7 @@
         "Wall": true,
         "Ground": false,
         "Player": true,
-        "Enemy": true,
+        "Enemy": false,
         "Drowner": true,
         "Dashcoll": true
     },
