--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -359,12 +359,15 @@
     </ClCompile>
     <ClCompile Include="UI_DamageCount.cpp">
       <Filter>Scripts\UI\HUD</Filter>
-     </ClCompile>
+    </ClCompile>
     <ClCompile Include="WagoneteAddVelocity.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
     <ClCompile Include="DummyEnemy.cpp">
       <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="BarrelDrop.cpp">
+      <Filter>Scripts\Objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -735,12 +738,15 @@
     </ClInclude>
     <ClInclude Include="UI_DamageCount.h">
       <Filter>Scripts\UI\HUD</Filter>
-       </ClInclude>
+    </ClInclude>
     <ClInclude Include="WagoneteAddVelocity.h">
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
     <ClInclude Include="DummyEnemy.h">
       <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelDrop.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
