--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -20,6 +20,12 @@
         },
         {
             "Layer": "Dashcoll"
+        },
+        {
+            "Layer": "NoOscillator"
+        },
+        {
+            "Layer": "OscillatorWall"
         }
     ],
     "Default": {
@@ -29,7 +35,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Wall": {
         "Default": true,
@@ -38,7 +46,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Ground": {
         "Default": true,
@@ -47,7 +57,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": false,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Player": {
         "Default": true,
@@ -56,7 +68,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Enemy": {
         "Default": true,
@@ -65,7 +79,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Drowner": {
         "Default": true,
@@ -74,7 +90,9 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
     },
     "Dashcoll": {
         "Default": true,
@@ -83,6 +101,30 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": true
+    },
+    "NoOscillator": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true,
+        "Drowner": true,
+        "Dashcoll": true,
+        "NoOscillator": true,
+        "OscillatorWall": false
+    },
+    "OscillatorWall": {
+        "Default": true,
+        "Wall": true,
+        "Ground": true,
+        "Player": true,
+        "Enemy": true,
+        "Drowner": true,
+        "Dashcoll": true,
+        "NoOscillator": false,
+        "OscillatorWall": true
     }
 }
