Added Ghouls and particles

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -364,6 +364,9 @@
     <ClCompile Include="SteeringAvoid.cpp">
       <Filter>Scripts\Enemies\Steering</Filter>
     </ClCompile>
+    <ClCompile Include="GhoulMini.cpp">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -737,6 +740,9 @@
     </ClInclude>
     <ClInclude Include="SteeringAvoid.h">
       <Filter>Scripts\Enemies\Steering</Filter>
+    </ClInclude>
+    <ClInclude Include="GhoulMini.h">
+      <Filter>Scripts\Enemies\Ghoul</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
