--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -204,6 +204,7 @@
     <ClInclude Include="DrownedRange.h" />
     <ClInclude Include="EnemyGroupLogic.h" />
     <ClInclude Include="GhoulDodge.h" />
+    <ClInclude Include="GhoulMini.h" />
     <ClInclude Include="GhoulOriginal.h" />
     <ClInclude Include="Leshen.h" />
     <ClInclude Include="CheckPoint.h" />
@@ -320,6 +321,7 @@
     <ClCompile Include="DrownedRange.cpp" />
     <ClCompile Include="EnemyGroupLogic.cpp" />
     <ClCompile Include="GhoulDodge.cpp" />
+    <ClCompile Include="GhoulMini.cpp" />
     <ClCompile Include="GhoulOriginal.cpp" />
     <ClCompile Include="Leshen.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
