--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -351,6 +351,26 @@
     <ClCompile Include="CameraWagonette.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
+    <ClCompile Include="UI_DamageCount.cpp">
+      <Filter>Scripts\UI\HUD</Filter>
+    </ClCompile>
+    <ClCompile Include="WagoneteAddVelocity.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
+    <ClCompile Include="CiriNado.cpp">
+    </ClCompile>
+    <ClCompile Include="DummyEnemy.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="BarrelDrop.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="CiriAura.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="CiriAuraTrigger.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -711,6 +731,26 @@
     </ClInclude>
     <ClInclude Include="CameraWagonette.h">
       <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="UI_DamageCount.h">
+      <Filter>Scripts\UI\HUD</Filter>
+    </ClInclude>
+    <ClInclude Include="WagoneteAddVelocity.h">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriNado.h">
+    </ClInclude>
+    <ClInclude Include="DummyEnemy.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="BarrelDrop.h">
+      <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriAura.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="CiriAuraTrigger.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
