--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -189,6 +189,8 @@
     <ClInclude Include="CameraUltiMode.h" />
     <ClInclude Include="CameraWagonette.h" />
     <ClInclude Include="Ciri.h" />
+    <ClInclude Include="CiriAura.h" />
+    <ClInclude Include="CiriAuraTrigger.h" />
     <ClInclude Include="CiriFightController.h" />
     <ClInclude Include="CiriOriginal.h" />
     <ClInclude Include="CloudLeshen.h" />
@@ -302,6 +304,8 @@
     <ClCompile Include="CameraUltiMode.cpp" />
     <ClCompile Include="CameraWagonette.cpp" />
     <ClCompile Include="Ciri.cpp" />
+    <ClCompile Include="CiriAura.cpp" />
+    <ClCompile Include="CiriAuraTrigger.cpp" />
     <ClCompile Include="CiriFightController.cpp" />
     <ClCompile Include="CiriOriginal.cpp" />
     <ClCompile Include="CloudLeshen.cpp" />
