rotation camera in focus cutscenes almost perfect(Idontcare enough to resolve it to be fair)
Co-Authored-By: Christian Martínez de la Rosa <christt105@users.noreply.github.com>

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -362,7 +362,7 @@
     </ClCompile>
     <ClCompile Include="UI_DamageCount.cpp">
       <Filter>Scripts\UI\HUD</Filter>
-     </ClCompile>
+    </ClCompile>
     <ClCompile Include="WagoneteAddVelocity.cpp">
       <Filter>Scripts\Vagoneta</Filter>
     </ClCompile>
@@ -370,6 +370,9 @@
     </ClCompile>
     <ClCompile Include="DummyEnemy.cpp">
       <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="SadTutorial.cpp">
+      <Filter>Scripts\Cameras</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -743,7 +746,7 @@
     </ClInclude>
     <ClInclude Include="UI_DamageCount.h">
       <Filter>Scripts\UI\HUD</Filter>
-       </ClInclude>
+    </ClInclude>
     <ClInclude Include="WagoneteAddVelocity.h">
       <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
@@ -751,6 +754,9 @@
     </ClInclude>
     <ClInclude Include="DummyEnemy.h">
       <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="SadTutorial.h">
+      <Filter>Scripts\Cameras</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
