--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -229,9 +229,6 @@
     <ClCompile Include="Bonfire.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="BlockerObstacle.cpp">
-      <Filter>Scripts\Objects</Filter>
-    </ClCompile>
     <ClCompile Include="Floating.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
@@ -366,6 +363,12 @@
     </ClCompile>
     <ClCompile Include="GhoulMini.cpp">
       <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClCompile>
+    <ClCompile Include="SteeringAvoidObstacle.cpp">
+      <Filter>Scripts\Enemies\Steering</Filter>
+    </ClCompile>
+    <ClCompile Include="BlockerObstacle.cpp">
+      <Filter>Scripts\Enemies</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -609,9 +612,6 @@
     <ClInclude Include="Bonfire.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="BlockerObstacle.h">
-      <Filter>Scripts\Objects</Filter>
-    </ClInclude>
     <ClInclude Include="Floating.h">
       <Filter>Scripts</Filter>
     </ClInclude>
@@ -743,6 +743,12 @@
     </ClInclude>
     <ClInclude Include="GhoulMini.h">
       <Filter>Scripts\Enemies\Ghoul</Filter>
+    </ClInclude>
+    <ClInclude Include="SteeringAvoidObstacle.h">
+      <Filter>Scripts\Enemies\Steering</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockerObstacle.h">
+      <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
