--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -265,6 +265,7 @@
     <ClInclude Include="Stat.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="SteeringAvoid.h" />
+    <ClInclude Include="SteeringAvoidObstacle.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
     <ClInclude Include="Training_Zone.h" />
@@ -381,6 +382,7 @@
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="SteeringAvoid.cpp" />
+    <ClCompile Include="SteeringAvoidObstacle.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
     <ClCompile Include="Training_Zone.cpp" />
