--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -20,12 +20,6 @@
         },
         {
             "Layer": "Dashcoll"
-        },
-        {
-            "Layer": "NoOscillator"
-        },
-        {
-            "Layer": "OscillatorWall"
         }
     ],
     "Default": {
@@ -35,9 +29,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Wall": {
         "Default": true,
@@ -46,9 +38,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Ground": {
         "Default": true,
@@ -57,9 +47,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": false,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Player": {
         "Default": true,
@@ -68,9 +56,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Enemy": {
         "Default": true,
@@ -79,9 +65,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Drowner": {
         "Default": true,
@@ -90,9 +74,7 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
+        "Dashcoll": true
     },
     "Dashcoll": {
         "Default": true,
@@ -101,30 +83,6 @@
         "Player": true,
         "Enemy": true,
         "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": true
-    },
-    "NoOscillator": {
-        "Default": true,
-        "Wall": true,
-        "Ground": true,
-        "Player": true,
-        "Enemy": true,
-        "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": true,
-        "OscillatorWall": false
-    },
-    "OscillatorWall": {
-        "Default": true,
-        "Wall": true,
-        "Ground": true,
-        "Player": true,
-        "Enemy": true,
-        "Drowner": true,
-        "Dashcoll": true,
-        "NoOscillator": false,
-        "OscillatorWall": true
+        "Dashcoll": true
     }
 }
