--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -252,6 +252,7 @@
     <ClInclude Include="ReverbZone.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="RockCarousel.h" />
     <ClInclude Include="RockDownHill.h" />
     <ClInclude Include="RockFall.h" />
     <ClInclude Include="RockThrow.h" />
@@ -371,6 +372,7 @@
     <ClCompile Include="ReverbZone.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="RockCarousel.cpp" />
     <ClCompile Include="RockDownHill.cpp" />
     <ClCompile Include="RockFall.cpp" />
     <ClCompile Include="RockThrow.cpp" />
