--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -374,6 +374,7 @@
     <ClCompile Include="BarrelDrop.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="RockCarousel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -758,6 +759,7 @@
     <ClInclude Include="BarrelDrop.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
+    <ClInclude Include="RockCarousel.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
