:metal: :pensive:  sorry, shit merge solved

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -366,9 +366,6 @@
     <ClCompile Include="DummyEnemy.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
-    <ClCompile Include="SadTutorial.cpp">
-      <Filter>Scripts\Cameras</Filter>
-    </ClCompile>
     <ClCompile Include="SteeringAvoid.cpp">
       <Filter>Scripts\Enemies\Steering</Filter>
     </ClCompile>
@@ -385,6 +382,10 @@
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
     <ClCompile Include="RockCarousel.cpp" />
+    <ClCompile Include="CiriAura.cpp" />
+    <ClCompile Include="CiriAuraTrigger.cpp" />
+    <ClCompile Include="SadTutorial.cpp">
+      <Filter>Scripts\Cameras</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -762,9 +763,6 @@
     <ClInclude Include="DummyEnemy.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
-    <ClInclude Include="SadTutorial.h">
-      <Filter>Scripts\Cameras</Filter>
-    </ClInclude>
     <ClInclude Include="SteeringAvoid.h">
       <Filter>Scripts\Enemies\Steering</Filter>
     </ClInclude>
@@ -781,6 +779,10 @@
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
     <ClInclude Include="RockCarousel.h" />
+    <ClInclude Include="CiriAura.h" />
+    <ClInclude Include="CiriAuraTrigger.h" />
+    <ClInclude Include="SadTutorial.h">
+      <Filter>Scripts\Cameras</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
