--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -275,6 +275,7 @@
     <ClInclude Include="SteeringAvoidObstacle.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
+    <ClInclude Include="TestingThread.h" />
     <ClInclude Include="Training_Zone.h" />
     <ClInclude Include="TriggerFog.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
@@ -400,6 +401,7 @@
     <ClCompile Include="SteeringAvoidObstacle.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
+    <ClCompile Include="TestingThread.cpp" />
     <ClCompile Include="Training_Zone.cpp" />
     <ClCompile Include="TriggerFog.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
