--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
     <ClInclude Include="EnemyGroupLogic.h" />
+    <ClInclude Include="FenceDoor.h" />
     <ClInclude Include="GhoulDodge.h" />
     <ClInclude Include="GhoulMini.h" />
     <ClInclude Include="GhoulOriginal.h" />
@@ -334,6 +335,7 @@
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
     <ClCompile Include="EnemyGroupLogic.cpp" />
+    <ClCompile Include="FenceDoor.cpp" />
     <ClCompile Include="GhoulDodge.cpp" />
     <ClCompile Include="GhoulMini.cpp" />
     <ClCompile Include="GhoulOriginal.cpp" />
