--- a/The Witcher/CoreData/Configuration/PhysicsSettings.json
+++ b/The Witcher/CoreData/Configuration/PhysicsSettings.json
@@ -78,7 +78,7 @@
         "Ground": true,
         "Player": true,
         "Enemy": true,
-        "Drowner": true,
+        "Drowner": false,
         "Dashcoll": true,
         "NoOscillator": true,
         "OscillatorWall": true
@@ -88,7 +88,7 @@
         "Wall": true,
         "Ground": false,
         "Player": true,
-        "Enemy": true,
+        "Enemy": false,
         "Drowner": true,
         "Dashcoll": true,
         "NoOscillator": true,
