--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="RockCarousel.h" />
     <ClInclude Include="RockDownHill.h" />
     <ClInclude Include="RockFall.h" />
+    <ClInclude Include="RockOrbit.h" />
     <ClInclude Include="RockThrow.h" />
     <ClInclude Include="RootLeshen.h" />
     <ClInclude Include="RockSpawner.h" />
@@ -383,6 +384,7 @@
     <ClCompile Include="RockCarousel.cpp" />
     <ClCompile Include="RockDownHill.cpp" />
     <ClCompile Include="RockFall.cpp" />
+    <ClCompile Include="RockOrbit.cpp" />
     <ClCompile Include="RockThrow.cpp" />
     <ClCompile Include="RootLeshen.cpp" />
     <ClCompile Include="RockSpawner.cpp" />
