--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -387,6 +387,9 @@
     <ClCompile Include="SadTutorial.cpp">
       <Filter>Scripts\Cameras</Filter>
     </ClCompile>
+    <ClCompile Include="RockOrbit.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -783,6 +786,9 @@
     <ClInclude Include="CiriAuraTrigger.h" />
     <ClInclude Include="SadTutorial.h">
       <Filter>Scripts\Cameras</Filter>
+    </ClInclude>
+    <ClInclude Include="RockOrbit.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
