ciri clones trail, deadzone for when clones fall

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -192,6 +192,7 @@
     <ClInclude Include="Ciri.h" />
     <ClInclude Include="CiriAura.h" />
     <ClInclude Include="CiriAuraTrigger.h" />
+    <ClInclude Include="CiriDeadZone.h" />
     <ClInclude Include="CiriFightController.h" />
     <ClInclude Include="CiriNado.h" />
     <ClInclude Include="CiriOriginal.h" />
@@ -321,6 +322,7 @@
     <ClCompile Include="Ciri.cpp" />
     <ClCompile Include="CiriAura.cpp" />
     <ClCompile Include="CiriAuraTrigger.cpp" />
+    <ClCompile Include="CiriDeadZone.cpp" />
     <ClCompile Include="CiriFightController.cpp" />
     <ClCompile Include="CiriNado.cpp" />
     <ClCompile Include="CiriOriginal.cpp" />
