--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -393,6 +393,10 @@
     <ClCompile Include="FenceDoor.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="TestingThread.cpp" />
+    <ClCompile Include="CiriDeadZone.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -795,6 +799,10 @@
     </ClInclude>
     <ClInclude Include="FenceDoor.h">
       <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="TestingThread.h" />
+    <ClInclude Include="CiriDeadZone.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
