--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -218,6 +218,7 @@
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="FadeImages.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="LoadingBackground.h" />
     <ClInclude Include="Main_Menu_Music.h" />
     <ClInclude Include="MeleeLeshen.h" />
     <ClInclude Include="MiniGame_Revive.h" />
@@ -348,6 +349,7 @@
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="LoadingBackground.cpp" />
     <ClCompile Include="Main_Menu_Music.cpp" />
     <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="MiniGame_Revive.cpp" />
