--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -397,6 +397,7 @@
     <ClCompile Include="CiriDeadZone.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="LoadingBackground.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -804,6 +805,7 @@
     <ClInclude Include="CiriDeadZone.h">
       <Filter>Scripts</Filter>
     </ClInclude>
+    <ClInclude Include="LoadingBackground.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
