Dwarf looks at closest player

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="DrownedGrab.h" />
     <ClInclude Include="Dummie.h" />
     <ClInclude Include="DummyEnemy.h" />
+    <ClInclude Include="Dwarf.h" />
     <ClInclude Include="EffectsFactory.h" />
     <ClInclude Include="Drowned.h" />
     <ClInclude Include="DrownedRange.h" />
@@ -336,6 +337,7 @@
     <ClCompile Include="DrownedGrab.cpp" />
     <ClCompile Include="Dummie.cpp" />
     <ClCompile Include="DummyEnemy.cpp" />
+    <ClCompile Include="Dwarf.cpp" />
     <ClCompile Include="EffectsFactory.cpp" />
     <ClCompile Include="Drowned.cpp" />
     <ClCompile Include="DrownedRange.cpp" />
