--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -398,6 +398,9 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="LoadingBackground.cpp" />
+    <ClCompile Include="Dwarf.cpp">
+      <Filter>Scripts\DWARVES JAJA XD</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -806,6 +809,9 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="LoadingBackground.h" />
+    <ClInclude Include="Dwarf.h">
+      <Filter>Scripts\DWARVES JAJA XD</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -885,6 +891,9 @@
     </Filter>
     <Filter Include="Scripts\Enemies\Steering">
       <UniqueIdentifier>{a22813e1-06a0-4f2c-af88-93c611da76da}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\DWARVES JAJA XD">
+      <UniqueIdentifier>{1e50a00a-0534-4353-a98d-91340326485c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
