main menu changing

--- a/The Witcher/Alien Engine/Alien Engine.vcxproj
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj
@@ -558,6 +558,7 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="ModuleTween.h" />
     <ClInclude Include="Trail.h" />
+    <ClInclude Include="UIConfig.h" />
     <ClInclude Include="UtilitiesPhysX.h" />
     <ClInclude Include="Viewport.h" />
     <ClInclude Include="WaterFrameBuffers.h" />
@@ -741,6 +742,7 @@
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="ModuleTween.cpp" />
     <ClCompile Include="Trail.cpp" />
+    <ClCompile Include="UIConfig.cpp" />
     <ClCompile Include="UtilitiesPhysX.cpp" />
     <ClCompile Include="Viewport.cpp" />
     <ClCompile Include="WaterFrameBuffers.cpp" />
