--- a/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
+++ b/The Witcher/Alien Engine/Alien Engine.vcxproj.filters
@@ -693,6 +693,9 @@
     <ClInclude Include="Trail.h">
       <Filter>Components\ParticleSystem</Filter>
     </ClInclude>
+    <ClInclude Include="UIConfig.h">
+      <Filter>ScriptHelpers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -1645,6 +1648,9 @@
     </ClCompile>
     <ClCompile Include="Trail.cpp">
       <Filter>Components\ParticleSystem</Filter>
+    </ClCompile>
+    <ClCompile Include="UIConfig.cpp">
+      <Filter>ScriptHelpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
