footstep sound on foot touching ground. sound material script

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -398,6 +398,8 @@
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="LoadingBackground.cpp" />
+    <ClCompile Include="SoundMaterial.cpp" />
+    <ClCompile Include="FootTrigger.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -806,6 +808,8 @@
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="LoadingBackground.h" />
+    <ClInclude Include="SoundMaterial.h" />
+    <ClInclude Include="FootTrigger.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
