--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Bonfire.h" />
     <ClInclude Include="Boss_Lifebar.h" />
     <ClInclude Include="BreakableObject.h" />
+    <ClInclude Include="BreakDoor.h" />
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
@@ -315,6 +316,7 @@
     <ClCompile Include="Bonfire.cpp" />
     <ClCompile Include="Boss_Lifebar.cpp" />
     <ClCompile Include="BreakableObject.cpp" />
+    <ClCompile Include="BreakDoor.cpp" />
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
