--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -401,6 +401,9 @@
     <ClCompile Include="Dwarf.cpp">
       <Filter>Scripts\DWARVES JAJA XD</Filter>
     </ClCompile>
+    <ClCompile Include="BreakDoor.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -811,6 +814,9 @@
     <ClInclude Include="LoadingBackground.h" />
     <ClInclude Include="Dwarf.h">
       <Filter>Scripts\DWARVES JAJA XD</Filter>
+    </ClInclude>
+    <ClInclude Include="BreakDoor.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
