Waggonnette UI trigger system

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -306,6 +306,7 @@
     <ClInclude Include="VagoneteObstacle.h" />
     <ClInclude Include="WagoneteAddVelocity.h" />
     <ClInclude Include="Wagonnete_UI.h" />
+    <ClInclude Include="Wagonnette_Triggers.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArrowScript.cpp" />
@@ -438,6 +439,7 @@
     <ClCompile Include="VagoneteObstacle.cpp" />
     <ClCompile Include="WagoneteAddVelocity.cpp" />
     <ClCompile Include="Wagonnete_UI.cpp" />
+    <ClCompile Include="Wagonnette_Triggers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
