--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -404,6 +404,9 @@
     <ClCompile Include="BreakDoor.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Wagonnette_Triggers.cpp">
+      <Filter>Scripts\Vagoneta</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -817,6 +820,9 @@
     </ClInclude>
     <ClInclude Include="BreakDoor.h">
       <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Wagonnette_Triggers.h">
+      <Filter>Scripts\Vagoneta</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
